# ferrox-gateway

./: package.json  readme.md
backend/: Cargo.toml
backend/src/: db_init.rs  errors.rs  handlers.rs  helpers.rs  main.rs  models.rs
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/components/: CTA.tsx  CustomCursor.tsx  Footer.tsx  GlobalNetwork.tsx  Hero.tsx  Marquee.tsx  Navbar.tsx  PlatformStacking.tsx  Reveal.tsx  Showcase.tsx  Testimonials.tsx
frontend/src/routes/: __root.tsx  index.tsx
src/: styles.css
src/components/: CustomCursor.tsx  GlobalNetwork.tsx  Hero.tsx  HorizontalScroll.tsx  Navbar.tsx  SmoothScroll.tsx
src/routes/: __root.tsx  index.tsx
