[package]
name = "ferrox"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.13.0"
argon2 = { version = "0.5.3", features = ["std"] }
dotenv = "0.15.0"
dotenvy = "0.15.7"
rand = "0.10.1"
serde = "1.0.228"
serde_json = "1.0.150"
sqlx = { version = "0.9.0", features = ["postgres"] }
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-actix-web = "0.7.21"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = "1.23.2"
